# vimjuta

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
misc/: Makefile.am  accels.diff  anjuta-gvim.vim  anjuta.gvimrc  anjuta.gvimrc.in  anjuta.vimrc  editor_multiple.diff  locked_keys  vim-dbus.py  vimjuta-accels
po/: Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  anjuta-gvim.glade  anjuta-gvim.plugin  anjuta-gvim.plugin.in  anjuta-gvim.ui  anjuta_gvim.plugin  anjuta_gvim.plugin.in  plugin.c  plugin.h  vim-cell.c  vim-cell.h  vim-comm.c  vim-comm.h  vim-dbus-glue.xml  vim-dbus-marshallers.h  vim-dbus.c  vim-dbus.h  vim-dbus.py  vim-editor-priv.h  vim-editor.c  vim-editor.h  vim-idocument.c  vim-ieditor.c  vim-ifile.c  vim-signal.c  vim-signal.h  vim-signal.marshall  vim-test.c  vim-test.h  vim-test.ui  vim-util.c  vim-util.h  vim-widget-priv.h  vim-widget.c  vim-widget.h
